Yank out some old css and fix up title and play button spacing.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -62,7 +62,7 @@ button:focus {
   padding-top: 15%;
   font-family: cursive;
   width: 50em;
-  height: 10%;
+  height: 75px;
   margin: 0 auto;
   display: block;
 }
@@ -73,83 +73,4 @@ button:focus {
 
 #controls > #bottom > button {
   color: #222
-}
-
-#play-pause {
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  border-left: 60px solid #fff;
-  margin: .5% auto 50px auto;
-  position: relative;
-  z-index: 1;
-  transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  left: 10px;
-}
-#play-pause:before {
-  content: '';
-  position: absolute;
-  top: -75px;
-  left: -115px;
-  bottom: -75px;
-  right: -35px;
-  border-radius: 50%;
-  border: 10px solid #fff;
-  z-index: 2;
-  transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-}
-#play-pause:after {
-  content: '';
-  opacity: 0;
-  transition: opacity 0.6s;
-  -webkit-transition: opacity 0.6s;
-  -moz-transition: opacity 0.6s;
-}
-#play-pause:hover:before, #play-pause:focus:before {
-  transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-}
-#play-pause.active {
-  border-color: transparent;
-}
-#play-pause.active:after {
-  content: '';
-  opacity: 1;
-  width: 50px;
-  height: 80px;
-  background: #fff;
-  position: absolute;
-  right: 5px;
-  top: -40px;
-  border-left: 20px solid #fff;
-  box-shadow: inset 30px 0 0 0 #000;
-}
-
-a#next:before {
-    left:9px;
-    width:2px;
-    height:10px;
-    margin-top:-4px;
-}
-
-a#next:after {
-    left:2px;
-    border:5px solid transparent;
-    border-width:5px 7px;
-    border-left-color:#c55500;
-    margin-top:-4px;
-    background:transparent;
-}
-
-a#next:hover:after,
-a#next:focus:after,
-a#next:active:after {
-    border-left-color:#730800;
 }
